CFG.txt
<DOCUMENT> --> <FORM_TITLE><SECTION_LIST>
<SECTION_LIST> --> <SECTION> | <SECTION><SECTION_LIST>
<SECTION> --> <SECTION_TITLE> <SECTION_BODY> | <SECTION_BODY>

<SECTION_BODY> --> <FORM_ELEMENT_LIST>
<FORM_ELEMENT_LIST> --> <FORM_ELEMENT> | <FORM_ELEMENT><FORM_ELEMENT_LIST>
<FORM_ELEMENT> --> <FIELD> | <NOTE>

<FIELD> --> <FIELD_LABEL><FIELD_SPACE>

TERMINALS ID:
FORM_TITLE 1
SECTION_TITLE 2
FIELD_LABEL 3
FIELD_SPACE 4
NOTE 5

EDITED GRAMMAR TO FIT RECURSIVE DESCENT:
DOCUMENT        → FORM_TITLE SECTION_LIST

SECTION_LIST    → SECTION SECTION_LIST | ε
SECTION         → SECTION_TITLE SECTION_BODY | SECTION_BODY

SECTION_BODY    → FORM_ELEMENT_LIST
FORM_ELEMENT_LIST → FORM_ELEMENT FORM_ELEMENT_LIST | ε
FORM_ELEMENT    → FIELD | NOTE

FIELD           → FIELD_LABEL FIELD_SPACE
